[gd_scene load_steps=3 format=3 uid="uid://j4jh655jrj7f"]

[ext_resource type="Script" uid="uid://bfv432ltdgxid" path="res://scenes/medicine_handler/medicine_tooltip.gd" id="1_86gtt"]

[sub_resource type="LabelSettings" id="LabelSettings_qoroi"]
font_size = 24

[node name="MedicineTooltip" type="PanelContainer"]
custom_minimum_size = Vector2(160, 70)
offset_left = 1.0
offset_top = 1.0
offset_right = 189.0
offset_bottom = 97.0
script = ExtResource("1_86gtt")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 30)
layout_mode = 2
text = "药水栏"
label_settings = SubResource("LabelSettings_qoroi")
vertical_alignment = 1

[node name="DescText" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 18
bbcode_enabled = true
text = "在战斗中使用药水来获得增益或阻扰敌人。"
fit_content = true
